5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1764_1577.log
== TEST (2019-05-23 17:16:22) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v0=float(input("velocida inicial: "))
N=int(input("nu: ")

arange(N)

d = ((a*(N**(2)))/2)+v0

print(d)

-- ERROR:
File "XXXX", line 7
    arange(N)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:16:32) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: ")

arange(N)

d = ((a*(N**(2)))/2)+v

print(d)

-- ERROR:
File "XXXX", line 7
    arange(N)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:16:59) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: ")

t=arange(N)

d = ((a*(t**(2)))/2)+v

print(d)

-- ERROR:
File "XXXX", line 7
    t=arange(N)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:18:39) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: ")

arange(N)
zeros(N)

d = ((a*(N**(2)))/2)+v
print(d)


-- ERROR:
File "XXXX", line 7
    arange(N)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:19:02) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)

d = ((a*(N**(2)))/2)+v



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:19:15) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)

d = ((a*(N**(2)))/2)+v
print(d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:19:59) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)

d = ((a*(N**(2)))/2)+v

print(N)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:21) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)

d = ((a*(N**(2)))/2)+v

print(arange(N))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:48) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)


d = ((a*(N**(2)))/2)+v
zeros(d)
print(d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:15:54) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)

d = ((a*(N**(2)))/2)+v*N	

print(n)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:16:09) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)

d = ((a*(N**(2)))/2)+v*N	

print(N)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:16:28) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)

d = ((a*(N**(2)))/2)+v*N	

print(d)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:17:23) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = ((a*(N**(2)))/2)+v*N	

print(d)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:17:51) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = ((a*(N**(2)))/2)+v*N	

print(arange(N))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:18:20) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = ((a*(N**(2)))/2)+v*N	

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:18:32) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = ((a*(N**(2)))/2)+v

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:19:13) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = ((a*(N**(2)))/2)+v

print(zeros(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:20:35) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = ((a*arange(N)**(2))/2)+v

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:21:01) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = a*N**(2)/2+v

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:34:09) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = a*N**(2)/(2+(v*N))

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:34:34) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = a*(N**(2))/(2+(v*N))

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-25 20:35:46) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
arange(N)
zeros(N)
d = (a*(N**(2))/2)+v

print(arange(d))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 21:32:14) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
f=arange(N)
b=zeros(N)

d1=(a*((f)**2))/2
d2=d1+v
print(d2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 21:32:44) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
f=arange(N)
b=zeros(N)

d1=(a*((f)**2))/2
d2=d1+(v*f)
print(d2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 21:32:52) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
f=arange(N)
b=zeros(N)

d1=(a*((f)**2))/2
d2=d1+(v*f)
print(d2)


-- EXECUTION TIME:
0.446154
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 21:33:07) 
-- CODE:
from numpy import*

a=float(input("aceleracao: "))
v=float(input("velocida inicial: "))
N=int(input("nu: "))
f=arange(N)
b=zeros(N)

d1=(a*((f)**2))/2
d2=d1+(v*f)
print(d2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
